fs_test/example_traces/interp_label_fail_dump-result-int.trace
@type script
dump-result /
end dump-result
